--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.5",
     "tone": "^13.8.25",
     "vue": "^2.6.11",
+    "vuedraggable": "^2.24.0",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
